--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@mui/x-tree-view": "^7.23.0",
     "axios": "^1.7.8",
     "jwt-decode": "^4.0.0",
     "react-router-dom": "^7.0.1"
