--- a/wbstoolui/package.json
+++ b/wbstoolui/package.json
@@ -14,6 +14,9 @@
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
+    "@mui/x-tree-view": "^7.23.0",
+    "axios": "^1.7.8",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1"
