--- a/wbstoolui/.env
+++ b/wbstoolui/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://wbstool.azurewebsites.net
+VITE_AUTH_API_URL=https://schoderauth.azurewebsites.net
+VITE_WBSTOOL_API_URL=https://wbstool.azurewebsites.net
